# sc1-driver-io

./: .gitignore  .gitmodules  Battery.qml  CMakeLists.txt  Config.cpp  Config.h  Dashboard.qml  DashboardUI.ui.qml  PowerForm.ui.qml  README.md  RestartWindow.qml  Temperature.qml  TemperatureForm.ui.qml  Timer.qml  back2frontlink.cpp  back2frontlink.h  backendprocesses.cpp  backendprocesses.h  config.h.in  config.json  format.json  images.qrc  main.cpp  main.qml  moc_predefs.h  qml.qrc  solar-car-dashboard  solar-car-dashboard.pro
DataGenerator/: CMakeLists.txt  DataGen.cpp  DataGen.h  DataUnpacker.cpp  DataUnpacker.h  main.cpp  readme.md
DataProcessor/: CMakeLists.txt  DataGen.cpp  DataGen.h  DataUnpacker.cpp  DataUnpacker.h  UnpackedData.h  dataUnpacker.cpp  dataUnpacker.h  datafetcher.cpp  datafetcher.h  main.cpp
UI/: Accelerator.qml  Alerts.qml  AlertsForm.ui.qml  Batteries.qml  Battery.qml  BatteryForm.ui.qml  BatteryInfo.qml  BatterySolarBox.qml  Blinkers.qml  BlinkersForm.ui.qml  CellStringTemps.qml  Clock.qml  ClockUI.qml  Cruise.qml  CruiseForm.ui.qml  LeftBox.qml  PackTempFanSpeed.qml  Power.qml  PowerForm.ui.qml  SolarInfo.qml  Speed.qml  SpeedForm.ui.qml  State.qml  StateForm.ui.qml  SupplementalBat.qml  Temperature.qml  TemperatureForm.ui.qml  TimerForm.ui.qml
UI/Images/: images.qrc
UI/Items/: Batteries.qml  BatteryInfo.qml  Blinkers.qml  DashboardUI.ui.qml  PackTempFanSpeed.qml  RestartWindow.qml  SolarInfo.qml  qml.qrc
UI/fonts/: fonts.qrc
UI/fonts/work sans/: README.txt
android/: AndroidManifest.xml
backend/: backendProcesses.cpp  backendProcesses.h  dataFetcher.cpp
backend/telemetrylib/: sql.cpp  tcp.cpp  telemetry.cpp
build-sqldrivers/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  config.summary  qtsqldrivers-config_p.h
build-sqldrivers/lib/cmake/Qt6Sql/: Qt6QOCIDriverPluginAdditionalTargetInfo.cmake  Qt6QOCIDriverPluginConfig.cmake  Qt6QOCIDriverPluginConfigVersion.cmake  Qt6QOCIDriverPluginTargets.cmake  Qt6QODBCDriverPluginAdditionalTargetInfo.cmake  Qt6QODBCDriverPluginConfig.cmake  Qt6QODBCDriverPluginConfigVersion.cmake  Qt6QODBCDriverPluginConfigVersionImpl.cmake  Qt6QODBCDriverPluginTargets.cmake  Qt6QSQLiteDriverPluginAdditionalTargetInfo.cmake  Qt6QSQLiteDriverPluginConfig.cmake  Qt6QSQLiteDriverPluginConfigVersion.cmake  Qt6QSQLiteDriverPluginTargets.cmake
build-sqldrivers/oci/: CTestTestfile.cmake  QOCIDriverPlugin_resource.rc.tmp  cmake_install.cmake
build-sqldrivers/oci/QOCIDriverPlugin_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-sqldrivers/oci/QOCIDriverPlugin_autogen/EWIEGA46WW/: moc_qsql_oci_p.cpp.d
build-sqldrivers/oci/QOCIDriverPlugin_autogen/include/: main.moc.d
build-sqldrivers/odbc/: CTestTestfile.cmake  QODBCDriverPlugin_resource.rc.tmp  cmake_install.cmake
build-sqldrivers/odbc/QODBCDriverPlugin_autogen/: deps  moc_predefs.h
build-sqldrivers/odbc/QODBCDriverPlugin_autogen/include/: main.moc.d  moc_qsql_odbc_p.cpp.d
build-sqldrivers/sqlite/: CTestTestfile.cmake  QSQLiteDriverPlugin_resource.rc.tmp  cmake_install.cmake
build-sqldrivers/sqlite/QSQLiteDriverPlugin_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-sqldrivers/sqlite/QSQLiteDriverPlugin_autogen/EWIEGA46WW/: moc_qsql_sqlite_p.cpp.d
build-sqldrivers/sqlite/QSQLiteDriverPlugin_autogen/include/: smain.moc.d
embedded/: controlsWrapper.cpp  controlsWrapper.h
embedded/devices/include/: ads1219.h  ina219.h  ina3221.h  tca6416.h
embedded/devices/src/: ads1219.cpp  ina219.cpp  ina3221.cpp  tca6416.cpp
embedded/drivers/: CMakeLists.txt  README.md
embedded/drivers/include/: analog.h  gpio.h  i2c-dev.h  i2c.h  serial.h
embedded/drivers/src/: analog.cpp  gpio.cpp  i2c.cpp  serial.cpp
ethernet_sim/: main.py
ethernet_sim/gps_dataset/: dataset1.csv  dataset1.gpx  dataset1.json
file_sync/: placeholder.txt
gps/: CMakeLists.txt  gps.cpp  gps.h  main.cpp
sc1-data-format/: format.json
telemetrylib/: .gitignore  CMakeLists.txt  DTI.h  DataResend.cpp  DataResend.h  SQL.cpp  Serial.cpp  TCP.cpp  Telemetry.cpp  Telemetry.h  UDP.cpp  library.cpp  library.h  readme.md
